--- a/PaperSummary/PaperSummary.bib
+++ b/PaperSummary/PaperSummary.bib
@@ -31,6 +31,51 @@ url="https://doi.org/10.1007/s10462-016-9487-5"
 	address = {San Francisco, CA, USA},
 } 
 
+@phdthesis(Plokin,
+author       = {Gordon Plokin}, 
+title        = {Automatic methods of inductive inference},
+school       = {Edinburgh University},
+year         = 1971,
+address      = {U.K.},
+)
+
+@InProceedings(Golem, 
+author 		= {Stephen Muggleton and Cao Feng},
+title		= {Efficient induction of logic programs},
+booktitle	= {Proceedings of the first conference on Algorithmic Learning Theory},
+pages 		= {368 -- 381},
+year		= 1990,
+)
+
+@article{ILP,
+	title = "Inductive Logic Programming: Theory and methods",
+	journal = "The Journal of Logic Programming",
+	volume = "19-20",
+	pages = "629 - 679",
+	year = "1994",
+	note = "Special Issue: Ten Years of Logic Programming",
+	issn = "0743-1066",
+	doi = "https://doi.org/10.1016/0743-1066(94)90035-3",
+	url = "http://www.sciencedirect.com/science/article/pii/0743106694900353",
+	author = "Stephen Muggleton and Luc de Raedt"
+}
+
+@Article{Muggleton1995,
+	author="Muggleton, Stephen",
+	title="Inverse entailment and progol",
+	journal="New Generation Computing",
+	year="1995",
+	month="Dec",
+	day="01",
+	volume="13",
+	number="3",
+	pages="245--286",
+	abstract="This paper firstly provides a re-appraisal of the development of techniques for inverting deduction, secondly introduces Mode-Directed Inverse Entailment (MDIE) as a generalisation and enhancement of previous approaches and thirdly describes an implementation of MDIE in the Progol system. Progol is implemented in C and available by anonymous ftp. The re-assessment of previous techniques in terms of inverse implication leads to new results for learning from positive data and inverting implication between pairs of clauses.",
+	issn="1882-7055",
+	doi="10.1007/BF03037227",
+	url="https://doi.org/10.1007/BF03037227"
+}
+
 @InProceedings{ProGolem,
 	author="Muggleton, Stephen
 	and Santos, Jos{\'e}
